PVXUAN Commit - add functionmultiple, divison a string by 2

--- a/Đồ Án/Đồ Án 1/Đồ Án 1.vcxproj.filters
+++ b/Đồ Án/Đồ Án 1/Đồ Án 1.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="Đồ Án 1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="floatingPoint.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="floatingPoint.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
