--- a/Đồ Án/Đồ Án 1/Đồ Án 1.vcxproj
+++ b/Đồ Án/Đồ Án 1/Đồ Án 1.vcxproj
@@ -147,7 +147,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="floatingPoint.cpp" />
     <ClCompile Include="Đồ Án 1.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="floatingPoint.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
