--- a/Đồ Án/BÀI 2/BÀI 2.vcxproj
+++ b/Đồ Án/BÀI 2/BÀI 2.vcxproj
@@ -18,6 +18,18 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="BigNum.cpp" />
+    <ClCompile Include="Bài-2.cpp" />
+    <ClCompile Include="Qfloat.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="BigNum.h" />
+    <ClInclude Include="Qfloat.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="input.txt" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <ProjectGuid>{455B6C8A-E636-40AA-B45D-521CEFBD814D}</ProjectGuid>
@@ -137,15 +149,6 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClInclude Include="C:\Users\PhamVietXuan\Downloads\BigNum.h" />
-    <ClInclude Include="C:\Users\PhamVietXuan\Downloads\Qfloat.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="C:\Users\PhamVietXuan\Downloads\BigNum.cpp" />
-    <ClCompile Include="C:\Users\PhamVietXuan\Downloads\Bài-2.cpp" />
-    <ClCompile Include="C:\Users\PhamVietXuan\Downloads\Qfloat .cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
